# ufde-next

public/FDE-Source-main/: .gitignore  CMakeLists.txt  README.md  formatall.sh
public/FDE-Source-main/NLFiner/: CMakeLists.txt  NLF_app.cpp  NLF_app.hpp  NLF_args.cpp  NLF_args.hpp  NLF_utils.cpp  NLF_utils.hpp  NLFiner.cpp  NLFiner.hpp  config.cpp  config.hpp  main.cpp
public/FDE-Source-main/bitgen/: CMakeLists.txt  a.py
public/FDE-Source-main/bitgen/bitstream/: BitgenFactory.cpp  BitgenFactory.h  bstrBase.h
public/FDE-Source-main/bitgen/bitstream/bstrGenerate/: bstrGener.cpp  bstrGener.h  loaderBase.h
public/FDE-Source-main/bitgen/bitstream/bstrGenerate/CMDLoader/: CMDLoader.cpp  CMDLoader.h  CMDLoader1000K.cpp  CMDLoader1000K.h  CMDLoader3000K.cpp  CMDLoader3000K.h  CMDLoader500K.cpp  CMDLoader500K.h  CMDLoader80K.cpp  CMDLoader80K.h  CMDLoaderBase.cpp  CMDLoaderBase.h
public/FDE-Source-main/bitgen/bitstream/bstrGenerate/FRMLoader/: FRMLoaderBase.cpp  FRMLoaderBase.h  FRMLoaderDevice.h
public/FDE-Source-main/bitgen/bitstream/logWriter/xmlWriter/: xmlWriter.cpp  (+1 more)
public/FDE-Source-main/bitgen/cil/: cilBase.cpp  cilBase.h  cilLib.cpp  cilLib.h  loadCil.cpp  loadCil.h
public/FDE-Source-main/bitgen/cil/bramLib/: bramLib.h
public/FDE-Source-main/bitgen/cil/bstrCMDLib/: bstrCMDLib.h
public/FDE-Source-main/bitgen/cil/clusterLib/: clusterLib.cpp  clusterLib.h
public/FDE-Source-main/bitgen/cil/elementLib/: elemLib.cpp  elemLib.h
public/FDE-Source-main/bitgen/cil/majorLib/: majorLib.h
public/FDE-Source-main/bitgen/cil/siteLib/: siteLib.h
public/FDE-Source-main/bitgen/cil/tileLib/: tileLib.cpp  tileLib.h
public/FDE-Source-main/bitgen/cil/transLib/: transLib.h
public/FDE-Source-main/bitgen/circuit/: circuit.cpp  circuit.h  cktBase.h  cktHandler.h
public/FDE-Source-main/bitgen/circuit/design/: design.cpp  design.h
public/FDE-Source-main/bitgen/circuit/instLib/: instLib.cpp  instLib.h
public/FDE-Source-main/bitgen/circuit/netLib/: netLib.cpp  netLib.h
public/FDE-Source-main/bitgen/circuit/xdl/: xdlCktHandler.cpp  xdlCktHandler.h
public/FDE-Source-main/bitgen/circuit/xml/: xmlCktHandler.cpp  xmlCktHandler.h
public/FDE-Source-main/bitgen/container/: Container.h
public/FDE-Source-main/bitgen/exception/: exceptions.h
public/FDE-Source-main/bitgen/main/: main.cpp
public/FDE-Source-main/bitgen/main/BGenApp/: BGenApp.cpp  BGenApp.h
public/FDE-Source-main/bitgen/main/arguments/: Args.cpp  Args.h
public/FDE-Source-main/bitgen/utils/: PropertyName.h  cfgInTile.h  expCalc.cpp  expCalc.h  sizeSpan.cpp  sizeSpan.h  specialNets.cpp  specialNets.h
public/FDE-Source-main/common/: CMakeLists.txt
public/FDE-Source-main/common/arch/: archlib.cpp  archlib.hpp  loadarchlib.cpp  loadarchlib.hpp
public/FDE-Source-main/common/io/: blifapp.cpp  blifapp.h  blifloader.cpp  fileio.cpp  fileio.hpp  loadedif.cpp  loadedif.hpp  nlcheck.cpp  saveedif.cpp  savesimvl.cpp  saveverilog.cpp  usingcheck.h  usingedif.h  usingrtsimvl.h  usingsimvl.h  usingverilog.h
public/FDE-Source-main/common/io/xml/: loadrtxml.cpp  loadrtxml.hpp  loadtxml.cpp  loadtxml.hpp  loadxml.cpp  loadxml.hpp  saveoxml.cpp  savertxml.cpp  savertxml.hpp  savetxml.cpp  savetxml.hpp  savexml.cpp  savexml.hpp
public/FDE-Source-main/common/netlist/: netlist.cpp  netlist.hpp  object.hpp  property.hpp  ptrcontainer.hpp  rtnetlist.hpp  tnetlist.hpp
public/FDE-Source-main/common/report/: fdu_report.xsl  report.cpp  report.h  sample_template.xml  sta_report.xsl
public/FDE-Source-main/common/rrg/: rrg.cpp  rrg.hpp
public/FDE-Source-main/common/tengine/: tengine.cpp  tengine.hpp
public/FDE-Source-main/common/utils/: log.cpp  log.h  matrix.h  utils.h  version.h  xmlutils.h  zfstream_full.h  zfstream_stub.h
public/FDE-Source-main/mapping/: CMakeLists.txt  aigtransform.cpp  args.cpp  args.hpp  main.cpp  mapping.cpp  mapping.hpp  patternmap.cpp
public/FDE-Source-main/packing/: CMakeLists.txt
public/FDE-Source-main/packing/head/: CSP_Struct.h  CellGraph.h  Instruction.h  Match.h  NetlistCSP.h  PKApp.h  PKConfig.h  PKFactory.h  PKMsg.h  PKUtils.h  Packer.h  Rule.h  TestExpression.h  Transformer.h
public/FDE-Source-main/packing/source/: CSP_Struct.cpp  CellGraph.cpp  DumpXdl.cpp  Factory.cpp  Instruction.cpp  MacroProcess.cpp  Match.cpp  NetlistCSP.cpp  PKApp.cpp  PKConfig.cpp  PKUtils.cpp  Packer.cpp  Rule.cpp  TestExpression.cpp  Transformer.cpp  main.cpp
public/FDE-Source-main/placer/: CMakeLists.txt  main.cpp  plc_algorithm.cpp  plc_algorithm.h  plc_app.cpp  plc_app.h  plc_args.cpp  plc_args.h  plc_boundingbox.cpp  plc_boundingbox.h  plc_carry_infer.cpp  plc_carry_infer.h  plc_const_infer.cpp  plc_const_infer.h  plc_device.cpp  plc_device.h  plc_factory.cpp  plc_factory.h  plc_floorplan.cpp  plc_floorplan.h  plc_load_delay_lib.cpp  plc_load_delay_lib.h  plc_lut6_infer.cpp  plc_lut6_infer.h  plc_netlist.cpp  plc_netlist.h  plc_utils.cpp  plc_utils.h
public/FDE-Source-main/router/: CMakeLists.txt
public/FDE-Source-main/router/head/: InfoPool.h  RTApp.h  RTCstLoadHandler.h  RTFactory.h  RTMsg.h  RTNode.h  Router.h  archValidation.h  cillib.h  loadcillib.h  rheap.h  rtree.h  rutils.h  simpleArchWriter.h
public/FDE-Source-main/router/src/: CMakeLists.txt  InfoPool.cpp  RTApp.cpp  RTCstLoadHandler.cpp  RTFactory.cpp  RouteBreadthFirst.cpp  RouteTiming.cpp  Router.cpp  archValidation.cpp  cillib.cpp  loadcillib.cpp  main.cpp  rheap.cpp  rtree.cpp  savertverilog.cpp  simpleArchWriter.cpp
public/FDE-Source-main/sta/: CMakeLists.txt  iclib.cpp  iclib.hpp  main.cpp  net_walk_guider.cpp  net_walk_guider.hpp  rd_engine.cpp  rd_engine.hpp  rd_tree.cpp  rd_tree.hpp  sta_app.cpp  sta_app.hpp  sta_arg.cpp  sta_arg.hpp  sta_engine.cpp  sta_engine.hpp  sta_report.cpp  sta_report.hpp  sta_utils.cpp  sta_utils.hpp
public/FDE-Source-main/vl2xml/: CMakeLists.txt  DebugHelper.cpp  DebugHelper.hpp  MapInstance.h  ParseDesign.cpp  VerilogDesign.h  VerilogLoader.cpp  VerilogMisc.cpp  VerilogMisc.h  Vl2xmlApp.cpp  Vl2xmlApp.h  main.cpp  module.cpp  module.h  vl2xml_YYSTYPE.h  vl2xml_lexer.lxx  vl2xml_parser.ypp
(+57 files in other folders)
